--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -1,21 +1,27 @@
 .testimonials {
+  padding-top: $padding-xl * 2 !important;
+
+  @media (min-width: $breakpoint-md) {
+    padding-top: $padding-lg !important;
+  }
+
   .testimonials__content {
     display: flex;
     flex-direction: column;
     gap: $grid-spacing-sm;
-    padding: 3rem;
+    padding: $padding-md;
     border-radius: $border-radius-sm;
     @include gradientBG($colour-dark-blue, $primary-accent);
 
     @media (min-width: $breakpoint-md) {
       gap: $grid-spacing-md;
-      padding: 4rem;
+      padding: $padding-lg;
     }
 
     @media (min-width: $breakpoint-lg) {
       gap: $grid-spacing-lg;
       border-radius: $border-radius-lg;
-      padding: 5rem;
+      padding: $padding-xl;
     }
 
     .testimonial {
@@ -23,8 +29,9 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      align-self: center;
       text-align: center;
-      gap: 1rem;
+      // gap: 1rem;
       max-width: 900px;
       margin-inline: auto;
 
